Extend CheckboxCard functionality - add visible and live to QuestionInputDTO and QuestionReturnDTO - fix RegisterTeam select - fix QuestionType

--- a/src/pages/RegisterTeam.css
+++ b/src/pages/RegisterTeam.css
@@ -54,13 +54,19 @@ h1 {
         width: 100%;
         padding: 10px;
         font-weight: normal !important;
-        font-family: Poppins  !important;
+        font-family: Poppins !important;
         color: #fff;
         font-size: 16px !important;
 
         &:focus-visible {
             outline: none;
         }
+        option {
+            color: #fff;
+            background: #1a1a1a;
+            font-family: Poppins !important;
+        }
+
     }
 
     input {
@@ -114,6 +120,21 @@ ion-button::part(native) {
 ion-button {
     width: 100%;
     margin: 0;
+}
+
+ion-button.bsurvey::part(native) {
+    --ion-color-base: #32345E !important;
+    /*background: linear-gradient(to right, var(--ion-color-gradient01) 70%, var(--ion-color-base) 70%);*/
+    background: var(--ion-color-gradient02);
+    background: linear-gradient(to right, var(--ion-color-gradient02) 70%, var(--ion-color-base) 70%);
+    padding: 8px 16px;
+    /*background: linear-gradient(to right, linear-gradient(to right, var(--ion-color-gradient01) 70%, var(--ion-color-base) 70%) 70%, var(--ion-color-base) 70%);*/
+
+}
+
+ion-button.bsurvey:hover::part(native) {
+    --ion-color-gradient01: #6b6dfa; /* Farbe beim Hover */
+    --ion-color-base: #454678; /* Sanfter Übergang der Basisfarbe */
 }
 
 .adminDashboard {
